🐞 fix(header): resolve multiple-line in navbar; ensure no x overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,6 +51,7 @@ body {
 	background-size: 100%;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
+	overflow-x: hidden;
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
 	line-height: 1.7;
@@ -142,10 +143,13 @@ hr {
 }
 @media (max-width: 720px) {
 	body {
-		font-size: 18px;
+		font-size: 16px;
 	}
 	main {
 		padding: 1em;
+	}
+	.header {
+		display: none;
 	}
 }
 
